--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -10,7 +10,7 @@
     {% for publication in post_list %}
         <ul>
             <li>
-                <h2>{{ publication.title }}</h2>
+                <a href="{% url 'post-detail' publication.id %}"><h2>{{ publication.title }}</h2></a>
                 <p>{{ publication.author }}</p>
             </li>
         </ul>  
