--- a/templates/_base.html
+++ b/templates/_base.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <a href="{% url 'post-list' %}"><h1>Blog personal</h1></a>
+    <a href="{% url 'post-new' %}">Nueva publicación</a>
     {% block content %}
     {% endblock content %}
 </body>
