--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -5,4 +5,5 @@
     <p>{{ post.author }}</p>
     <p>{{ post.body }}</p>
     <p>{{ post.created_at }}</p>
+    <a href="{% url 'post-edit' post.id %}">Edición</a>
 {% endblock content %}
