delete post added

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -6,4 +6,5 @@
     <p>{{ post.body }}</p>
     <p>{{ post.created_at }}</p>
     <a href="{% url 'post-edit' post.id %}">Edición</a>
+    <a href="{% url 'post-delete' post.id %}">Borrar</a>
 {% endblock content %}
