--- a/templates/_base.html
+++ b/templates/_base.html
@@ -11,6 +11,7 @@
 <body>
     <a href="{% url 'post-list' %}"><h1>Blog personal</h1></a>
     <a href="{% url 'post-new' %}">Nueva publicación</a>
+    <a href="{% url 'login' %}">Iniciar sesion</a>
     {% block content %}
     {% endblock content %}
 </body>
