--- a/templates/_base.html
+++ b/templates/_base.html
@@ -11,7 +11,17 @@
 <body>
     <a href="{% url 'post-list' %}"><h1>Blog personal</h1></a>
     <a href="{% url 'post-new' %}">Nueva publicación</a>
-    <a href="{% url 'login' %}">Iniciar sesion</a>
+        
+    {% if user.is_authenticated %}
+        <p>Hola, {{ user.username }} | </p>
+        <form action="{% url 'logout' %}" method="post">
+            {% csrf_token %}
+            <button type="submit">Cerrar sesión</button>
+        </form>
+    {% else %}
+        <a href="{% url 'login' %}">Iniciar sesión</a>
+    {% endif %}
+    
     {% block content %}
     {% endblock content %}
 </body>
