--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -5,6 +5,10 @@
     <p>{{ post.author }}</p>
     <p>{{ post.body }}</p>
     <p>{{ post.created_at }}</p>
-    <a href="{% url 'post-edit' post.id %}">Edición</a>
-    <a href="{% url 'post-delete' post.id %}">Borrar</a>
+
+    <!-- Only show edit and delete options if the logged-in user is the author of the post -->
+    {% if post.author.pk == request.user.pk %}
+        <a href="{% url 'post-edit' post.id %}">Edición</a>
+        <a href="{% url 'post-delete' post.id %}">Borrar</a>
+    {% endif %}
 {% endblock content %}
